# polyforge

./: .gitignore  API.md  CLAUDE.md  README.md  SIMPLIFY_CODE_DESIGN.md  SIMPLIFY_DESIGN.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish-on-release.yml  publish.yml
debug/: README.md  clearance_vis.py  merge_vis.py  plot_geometry.py
polyforge/: __init__.py  fix.py  merge.py  metrics.py  overlap.py  pipeline.py  process.py  simplify.py  split.py  tile.py  topology.py
polyforge/clearance/: __init__.py  _diagnosis.py  _helpers.py  fix_clearance.py  holes.py  passages.py  protrusions.py  remove_protrusions.py  utils.py
polyforge/core/: __init__.py  cleanup.py  constraints.py  errors.py  geometry_utils.py  iterative_utils.py  spatial_utils.py  types.py  validation_utils.py
polyforge/merge/: __init__.py  core.py
polyforge/ops/: cleanup_ops.py  merge_boundary_extension.py  merge_common.py  merge_convex_bridges.py  merge_edge_detection.py  merge_ops.py  merge_selective_buffer.py  merge_simple_buffer.py  merge_vertex_movement.py  (+1 more)
tests/: test_cleanup.py  test_clearance.py  test_clearance_utils.py  test_errors.py  test_fix.py  test_fix_clearance.py  test_merge.py  test_merge_convex_bridges.py  test_merge_vertex_insertion.py  test_metrics.py  test_overlap.py  test_pipeline.py  test_process_geometry.py  test_remove_duplicate_vertices.py  test_remove_protrusions.py  test_remove_small_holes.py  test_repair.py  test_robust_fix.py  test_simplify.py  test_simplify_algorithms.py  test_snap_short_edges.py  test_split.py  test_tile.py  test_topology.py
(+33 files in other folders)
