[project]
name = "polyforge"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.1",
    "scipy>=1.15.3",
    "shapely>=2.1.0",
    "simplification>=0.7.14",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "matplotlib>=3.7.0",
]
