[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polyforge"
version = "0.1.0a"
description = "polygon processing and manipulation library built on Shapely - simplification, repair, merging, overlap resolution, and clearance fixing"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.1",
    "scipy>=1.15.3",
    "shapely>=2.1.0",
    "simplification>=0.7.14",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "matplotlib>=3.7.0",
    "fiona>=1.10.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["polyforge*"]
exclude = ["tests*", "examples*", "debug*"]
